[tool.poetry]
name = "server"
version = "2.2.0"
description = ""
authors = ["andefined <dimitris.papaevagelou@andefined.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gensim = "^3.8.1"
nltk = "^3.7"
python-dateutil = "^2.8.2"
spacy = "3.2"
spacy-lookups-data = "^1.0.3"
torch = "1.10.2"
python-dotenv = "^0.20.0"
grpcio = "^1.46.0"
grpcio-status = "^1.46.0"
networkx = "^2.8"
googleapis-common-protos = "^1.56.0"
transformers = "^4.26.1"
safetensors = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
poetry2setup = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
